[project]
name = "minilink"
version = "0.1.0"
description = ""
authors = [
    {name = "rastr-0"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1)",
    "pydantic (>=2.11.7)",
    "pydantic-settings (>=2.10.1)",
    "sqlalchemy (>=2.0.41)",
    "asyncpg (>=0.30.0)",
    "bcrypt (==3.2.0)",
    "pyjwt (>=2.10.0)",
    "alembic (>=1.16.4)",
    "mkdocs (>=1.6.1)",
    "mkdocs-terminal (>=4.7.0)",
    "passlib (>=1.7.4)",
    "uvicorn (>=0.35.0)",
    "python-multipart (>=0.0.20)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
